# U_SDMX

./: README.md  main.py  pyproject.toml  requirements.txt  setup.cfg
USDMX_reader/: sdmx_parser.py
src/USDMX/: sdmx_data_access.py
