[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "USDMX"
version = "0.0.1"
authors = [
  { name="Daniele Olivotti"},
]
description = "A SDMX reader package"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "pandas==2.*",
  "requests",
  "requests_cache"
]